<resources>
    <string name="app_name">QRPay</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="send_sms">Send SMS</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email_address">Enter Email Address</string>
    <string name="hint_password">Enter 6 Digits Password</string>
    <string name="button_email_login">Login</string>
    <string name="text_error_phone">Try again or use email authentication</string>
    <string name="user_not_exist">User doesn\'t exist</string>
    <string name="not_have_account">Don\'t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="phone_auth">SMS authentication</string>
    <string name="email_auth">Email authentication</string>
    <string name="use_auth">Use</string>
    <string name="text_phone_code">+261</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create An Account</string>
    <string name="email_in_use">Email address is already in use</string>


    <string name="base_url_api">http://side-shelter-3000.codio.io/qrpay/api/v1.0/</string>
    <string name="url_not_found">The url is not found</string>
    <string name="unexpected_error">Unexpected error were encountered</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="check_balance">Check Balance</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>

    <string name="currency_text">MGA</string>
    <string name="pay_now">Pay Now</string>
    <string name="enter_amount">Enter amount</string>
    <string name="submit">Submit</string>
    <string name="pay_confirm_text">Enter password to pay %1$s to %2$s</string>
    <string name="success_text">The transfer of %1$s to %2$s is successful.</string>
    <string name="balance_text">Your balance is %1$s</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="pay_me">Pay Me</string>
    <string name="scan_me">Scan QR Code to Pay Me</string>
    <string name="generating_qr_code">Generating your QR Code</string>

</resources>