<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raiza.qrpay.MailAuthActivity"
    android:background="@color/grey_100"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary"/>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <ProgressBar
            android:id="@+id/progress_view"
            style="@style/Widget.AppCompat.MyProgressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:theme="@style/CircularProgress" />


        <TextView
            android:id="@+id/title_text_phone_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/app_name"
            android:textColor="@color/grey_100"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_phone_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:paddingBottom="3.5dp"
                        android:layout_marginTop=".3dp"
                        android:layout_marginRight="-5dp"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:background="@drawable/textview_border"
                        android:text="@string/text_phone_code"/>

                    <EditText
                        android:id="@+id/field_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone_number"
                        android:textSize="20sp"
                        android:inputType="phone"
                        android:maxLength="10"/>

                </LinearLayout>



                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/hint_verification_code"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3.0">


                <Button
                    android:id="@+id/button_start_verification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/send_sms"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/button_verify_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/button_resend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/c_email_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/phone_error_margin"
                    android:text="@string/use_auth" />

                <Button
                    android:id="@+id/c_email_auth_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ButtonLink"
                    android:text="@string/email_auth" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
