<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_100">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary"/>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <ProgressBar
            android:id="@+id/progress_view"
            style="@style/Widget.AppCompat.MyProgressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:theme="@style/CircularProgress" />


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|top"
            android:paddingTop="30dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/scan_qr_code"
                android:onClick="launchScanner"
                android:textSize="24sp"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/check_balance"
                android:layout_marginTop="30dp"
                android:textSize="24sp"
                android:onClick="checkBalance"
                android:theme="@style/ThemeOverlay.MyGreenButton"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/pay_me"
                android:layout_marginTop="30dp"
                android:textSize="24sp"
                android:onClick="createQRCode"
                android:theme="@style/ThemeOverlay.MyPrimaryButton"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>

